# uwh-display

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md
docs/: Hardware.md  display-check.md
include/uwhd/: SecondsRing.h
include/uwhd/canvas/: Canvas.h  CanvasViewer.h  LEDCanvasViewer.h  PPMCanvasViewer.h
include/uwhd/config/: Config.h.cmake  Status.h.cmake
include/uwhd/console/: Console.h
include/uwhd/display/: BigNumber.h  GameDisplay.h  RenderElement.h  SecondsRing.h  Status.h  TimeDisplay.h
include/uwhd/model/: GameModel.h
include/uwhd/sync/: ModelSync.h
lib/: BigNumber.cpp  CMakeLists.txt  ColorSettings.cpp  GameDisplay.cpp  GameModel.cpp  SecondsRing.cpp  TimeDisplay.cpp  main.cpp
lib/canvas/: CMakeLists.txt  Canvas.cpp  LEDCanvasViewer.cpp  NOLEDCanvasViewer.cpp  PPMCanvasViewer.cpp
lib/console/: CMakeLists.txt  Console.cpp
lib/display/: BigNumber.cpp  CMakeLists.txt  ColorSettings.cpp  GameDisplay.cpp  SecondsRing.cpp  Status.cpp  TimeDisplay.cpp
lib/model/: CMakeLists.txt  GameModel.cpp
lib/sync/: CMakeLists.txt  NoSocketSyncClient.cpp  NoSocketSyncServer.cpp  NoXBeeSync.cpp  SocketSync.cpp  SocketSyncClient.cpp  SocketSyncServer.cpp  XBeeSyncServer.cpp
scripts/: display.sh  general-setup-1.sh  general-setup-2.sh  general-setup-3.sh  uwh-display-setup-1.sh  uwh-display-setup-2.sh  uwh-display-setup-3.sh
src/: BigNumber.cpp  BigNumber.h  ColorSettings.cpp  GameDisplay.cpp  GameDisplay.h  GameModel.cpp  GameModel.h  RenderElement.h  SecondsRing.cpp  SecondsRing.h  TimeDisplay.cpp  TimeDisplay.h  main.cpp
swig/: CMakeLists.txt
swig/uwhd/: CMakeLists.txt  canvas.i  console.i  display.i  model.i  sync.i  uwhd.i  uwhdnodisp.i
test/: lit.cfg
test/display/: game-1.ppm  scores-0.ppm  scores-1.ppm  scores-11-v2.ppm  scores-11.ppm  scores-2.ppm  scores-22.ppm  scores-3.ppm  scores-33.ppm  scores-4.ppm  scores-44.ppm  scores-5.ppm  scores-55.ppm  scores-6.ppm  scores-66.ppm  scores-7.ppm  scores-77.ppm  scores-8.ppm  scores-88.ppm  scores-9-v2.ppm  scores-9.ppm  scores-99.ppm  time-1-v2.ppm  time-2-v2.ppm  time-60s.ppm  time-zero.ppm
test/display-check/: in-from-pipe.ppm
test/swig/: canvas.py
tools/: CMakeLists.txt
tools/display-check/: CMakeLists.txt  display-check.cpp  uwhdc.cpp
tools/test-gamemodel/: CMakeLists.txt  test-gamemodel.cpp
tools/uwhd-QA-py/: uwhd-QA.py
tools/uwhd-demo-py/: uwhd-demo.py
tools/uwhdc/: CMakeLists.txt  uwhdc.cpp
tools/uwhdd/: CMakeLists.txt  uwhdd.cpp
tools/uwhdi/: CMakeLists.txt  uwhdi.cpp
tools/uwhdo-py/: README.txt  uwhdo.py
tools/uwhdr-py/: GPIO functions.py  game.cfg  uwhdr.py
tools/uwhdui/: .gitignore  setup.py  tox.ini
tools/uwhdui/uwhdui/: gamemanager.py  noiomanager.py  ui.py  ui_test.py
tools/xbee-node-detect/: CMakeLists.txt  xbee-node-detect.cpp
unittests/: CMakeLists.txt
unittests/test-canvas/: CMakeLists.txt  test-canvas.cpp
unittests/test-display/: CMakeLists.txt  test-display.cpp
unittests/test-gamemodel/: CMakeLists.txt  test-gamemodel.cpp
