FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

set(CMAKE_SWIG_FLAGS "-c++")
set(SWIG_CXX_EXTENSION "cpp")

SET_SOURCE_FILES_PROPERTIES(console.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(console.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(console python console.i)
SWIG_LINK_LIBRARIES(console ${PYTHON_LIBRARIES} uwhdconsole)

if(UWHD_BUILD_DISPLAY)
  SET_SOURCE_FILES_PROPERTIES(display.i PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES(display.i PROPERTIES SWIG_FLAGS "")
  SWIG_ADD_MODULE(display python display.i)
  SWIG_LINK_LIBRARIES(display ${PYTHON_LIBRARIES} uwhddisplay)
endif()

SET_SOURCE_FILES_PROPERTIES(model.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(model.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(model python model.i)
SWIG_LINK_LIBRARIES(model ${PYTHON_LIBRARIES} uwhdmodel)

SET_SOURCE_FILES_PROPERTIES(sync.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(sync.i PROPERTIES SWIG_FLAGS "")
SWIG_ADD_MODULE(sync python sync.i)
SWIG_LINK_LIBRARIES(sync ${PYTHON_LIBRARIES} uwhdsync)

